<resources>
    <string name="app_name">AndroidD20L11</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="your_music_fragment">Your Music</string>
    <string name="setting_fragment">Setting</string>
    <string name="edit_profile_Fragment">Edit Profile</string>
    <string name="home_menu">Home</string>
    <string name="play_menu">Play</string>
    <string name="setting_menu">Setting</string>
    <string name="tv_your_profile">Your Profile</string>
    <string name="tv_your_name">Your name</string>
    <string name="tv_your_phone">09xxxxxxxx</string>
    <string name="tv_your_email">yourname@gmail.com</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="favorite_menu">Favorite</string>
    <string name="your_favorite_menu">Your Favorite</string>
    <string name="my_name">Lê Quang Dũng</string>
    <string name="my_phone_number">0824910986</string>
    <string name="my_gmail">sankatana02@gmail.com</string>
</resources>